@@ -47,7 +47,7 @@ SceneAttributes = {'Exporter' : 'irrb',
                    'ExporterVersion' : 'x.x',
                    'OccludesLight' : 0,
                    'PhysicsEnabled':1,
-                   'Gravity' : '0 -9.8 0'}
+                   'Gravity' : -9.8}
 
 CameraAttributes = {'Fovy' : 0.857556,
                     'Aspect' : 1.25,
